--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "date-fns": "^2.21.3",
     "mdi-material-ui": "^6.22.1",
     "react": "^17.0.2",
