--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik-material-ui": "^3.0.1",
     "formik-material-ui-lab": "^0.0.8",
     "formik-material-ui-pickers": "^0.0.12",
+    "jwt-decode": "^3.1.2",
     "mdi-material-ui": "^6.22.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
