--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mdi-material-ui": "^6.22.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone-uploader": "^2.11.0",
     "react-helmet-async": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
