--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik-material-ui-pickers": "^0.0.12",
     "jwt-decode": "^3.1.2",
     "mdi-material-ui": "^6.22.1",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone-uploader": "^2.11.0",
