--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "formik-material-ui-pickers": "^0.0.12",
     "jwt-decode": "^3.1.2",
     "mdi-material-ui": "^6.22.1",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
